# Agent-G

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  install.sh  main.py  pyproject.toml  tools.txt
.claude-plugin/: marketplace.json  plugin.json
benchmark/: __init__.py  build_html_report.py  ghidra_oneshot.py  leak_filter.py  run_remaining_models.sh  test_juliet.py  verify_corpus_leaks.py
benchmark/ghidra/: JulietAnonymizer.java
docs/: BENCHMARK_COORDINATION.md  CODEX_BENCHMARK_HANDOFF.md  DRIVING.md  TROUBLESHOOTING.md
ghidra/: README.md
ghidra/scripts/: OGhidraHeadlessServer.java
logs/: juliet_comparison_report.html
sandbox/: Dockerfile  README.md  docker-compose.yml
scripts/: preflight.py
skills/agent-g/: SKILL.md  g.ps1  g.sh  provision_ghidra.py
src/: __init__.py  blackboard.py  bridge_lite.py  cli.py  command_parser.py  config.py  context_manager.py  correlation_hooks.py  correlation_hooks_builtin.py  coverage_tracker.py  custom_api_client.py  event_emitter.py  execution_gate.py  external_client.py  ghidra_client.py  headless_launcher.py  headless_repl.py  lazy_ghidra.py  lead_tracker.py  meta_tools.py  ollama_client.py  orchestrator.py  orchestrator_logger.py  recipe_registry.py  recipes.py  session_compactor.py  session_manager.py  tool_executor.py  tool_health.py  user_question.py
src/agents/: base.py  worker_agent.py
src/models/: memory.py
src/runtime/: __init__.py  api_client.py  bootstrap.py  budget.py  checkpoint.py  circuit_breaker.py  compactor.py  conversation.py  drive.py  ghidra_pool.py  observability.py  prompt_library.py  prompts.py  result_store.py  secrets.py  session.py  thinking_models.py  tool_logger.py  tool_runner.py  tool_schema.py  trace.py
tests/: test_conversation_replay.py
